# bevy_explorer

./: Cargo.toml
monitor/: Cargo.toml
monitor/src/: lib.rs  plugin.rs  systems.rs
rest/: Cargo.toml
rest/examples/: basic.rs
rest/src/: lib.rs  plugin.rs  rest.rs  systems.rs
