[package]
name = "bevy_ecs_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.11"
bevy = { version = "0.11", default-features = false, features = [] }

[dev-dependencies]
bevy = "0.11"