[package]
name = "bevy_ecs_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6.18"
bevy_ecs = "0.11"
bevy = { version = "0.11", default-features = false, features = [] }
bevy_ecs_monitor = { path = "../monitor" }
bevy-tokio-tasks = "0.11.0"
#tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "rt-multi-thread"]}
tokio = { version = "1.28.1", features = ["full"]}

[dev-dependencies]
bevy = "0.11"